--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ python:
 #  - TOX_ENV=py33-django-18
 #  - TOX_ENV=py27-django-18
 #  - TOX_ENV=py34-django-19
+#  - TOX_ENV=py35-django-19
 #  - TOX_ENV=py27-django-19
 #  - TOX_ENV=py34-django-110
 #  - TOX_ENV=py27-django-110
 
 env:
-  - TOX_ENV=py35-django-19
   - TOX_ENV=py35-django-110
 
 matrix:
