--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 ## Truncated env list
 [tox]
 envlist =
-    {py35}-django-19
     {py35}-django-110
 
 [testenv]
@@ -9,7 +8,6 @@ setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/django_view_hierarchy
 commands = coverage run --source django_view_hierarchy runtests.py
 deps =
-    django-19: Django>=1.9,<1.10
     django-110: Django>=1.10
     -r{toxinidir}/requirements_test.txt
 basepython =
@@ -19,6 +17,7 @@ basepython =
 #[tox]
 #envlist =
 #    {py27,py33,py34,py35}-django-18
+#    {py35}-django-19
 #    {py27,py34,py35}-django-19
 #    {py27,py34,py35}-django-110
 #
